# crsf-empty

./: .gitignore  CMakeLists.txt  README-ko.md  README.md
empty-module/: CMakeLists.txt  config.json  files.cmake
empty-module/include/empty_module/: empty_module.h
empty-module/src/: empty_module.cpp
empty-project/: CMakeLists.txt  config.json  files.cmake
empty-project/config/: DynamicModuleConfiguration.xml  SceneConfiguration.xml  SystemConfiguration.xml
empty-project/config/panda3d/render_pipeline/: plugins.yaml  stages.yaml
empty-project/src/: main.cpp  main.hpp  world.cpp  world.hpp
empty_module/: CMakeLists.txt  files.cmake
empty_module/include/empty_module/: module.h
empty_module/src/: module.cpp
empty_project/: CMakeLists.txt  files.cmake
empty_project/config/: SystemConfiguration.xml
empty_project/config/panda3d/render_pipeline/: plugins.yaml
empty_project/src/: main.cpp  main.hpp
empty_project/src/main_gui/: main_gui.cpp  main_gui.hpp
